--- a/ProductList.css
+++ b/ProductList.css
@@ -10,24 +10,112 @@
   background-color: #978f8f;
   height: 130px;
 }
+/* -----------文字----------- */
+.chineseText {
+  font-family: "Noto Sans TC", sans-serif;
+}
+.englishText {
+  font-family: "Noto Sans TC", sans-serif;
+}
+.englishTextBold {
+  font-family: "Source Sans Pro", sans-serif;
+}
+.englishTitle {
+  font-family: "Noto Sans TC", sans-serif;
+  font-family: "Nuosu SIL", serif;
+  font-family: "Source Sans Pro", sans-serif;
+}
+/* -----------篩選列表----------- */
+.filterBar {
+  padding-right: 0;
+}
+.filterBar ul {
+  padding-left: 0;
+}
 .filterBar {
   height: 70px;
+  padding: 0;
 }
 .filterBar ul {
   list-style: none;
 }
-/* -------checkBox------- */
-.form-check-input:checked {
-  background-color: #3a3a3a;
-  border-color: #3a3a3a;
-}
-.form-check-input:focus {
-  border-color: #666666;
-  outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(13, 109, 253, 0);
+/* -----------switch----------- */
+input[type="checkbox"] {
+  height: 0;
+  width: 0;
+  visibility: hidden;
 }
 
-/* -----------productList----------- */
+label {
+  cursor: pointer;
+  text-indent: -9999px;
+  width: 45px;
+  height: 25px;
+  background: grey;
+  display: block;
+  border-radius: 100px;
+  position: relative;
+}
+
+label:after {
+  content: "";
+  position: absolute;
+  top: 3.6px;
+  left: 3.7px;
+  width: 18px;
+  height: 18px;
+  background: #fff;
+  border-radius: 90px;
+  transition: 0.4s;
+}
+
+input:checked + label {
+  background: #1d1d1d;
+}
+
+input:checked + label:after {
+  left: calc(100% - 4px);
+  transform: translateX(-100%);
+}
+
+label:active:after {
+  width: 30px;
+}
+/* -----------商品篩選----------- */
+/* .productFilter ul {
+  list-style: none;
+  padding-left: 0;
+}
+.productFilter a{
+  text-decoration:none;
+  color: #000;
+}
+.productFilterPaddong{
+  padding-left: 20px;
+} */
+.accordion {
+  --bs-accordion-border-radius: 0rem;
+  width: 260px;
+}
+.accordion-button:focus {
+  z-index: 3;
+  border-color: var(--bs-accordion-btn-focus-border-color);
+  outline: 0;
+  box-shadow: none;
+}
+.accordion-button:not(.collapsed) {
+  color: #000000;
+  background-color: white;
+  box-shadow: inset 0 calc(var(--bs-accordion-border-width) * -1) 0 var(--bs-accordion-border-color);
+}
+.accordion-body{
+padding: 0px;
+}
+.accordion-button {
+  border: none;
+}
+
+/* -----------商品列表----------- */
 .cardStyle {
   --bs-card-border-radius: 0rem;
   border: unset;
@@ -36,11 +124,12 @@
   height: 400px;
   object-fit: cover;
 }
-.cardPadding{
-  padding-left: 0px;
+.cardSize {
+  width: 252px;
+  height: 500px;
 }
-.main {
-  height: 1500px;
+.cardPadding {
+  padding-left: 0px;
 }
 
 .productList {
