--- a/ProductList.css
+++ b/ProductList.css
@@ -10,22 +10,33 @@
   background-color: #978f8f;
   height: 130px;
 }
-/* -----------文字----------- */
+/* -----------文字統整----------- */
 .chineseText {
-  font-family: "Noto Sans TC", sans-serif;
+  font-family: 'Noto Sans TC', sans-serif;
 }
 .englishText {
-  font-family: "Noto Sans TC", sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
 }
-.englishTextBold {
-  font-family: "Source Sans Pro", sans-serif;
+/* -----------右側sticky功能欄----------- */
+.sidebar {
+  background-color: rgb(95, 95, 95);
+  float: right;
+  z-index: 9999;
 }
-.englishTitle {
-  font-family: "Noto Sans TC", sans-serif;
-  font-family: "Nuosu SIL", serif;
-  font-family: "Source Sans Pro", sans-serif;
+.sidebar {
+  width: 40px;
+  height: 15vh;
+  border-radius: 15px 0 0 15px;
 }
-/* -----------篩選列表----------- */
+.sidebar {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 35%;
+}
+.sidebar i {
+  color: rgb(255, 255, 255);
+}
+/* -----------商品材質、顏色、價格篩選列表----------- */
 .filterBar {
   padding-right: 0;
 }
@@ -39,13 +50,18 @@
 .filterBar ul {
   list-style: none;
 }
-/* -----------switch----------- */
-input[type="checkbox"] {
+.dropdown .btn {
+  border: unset !important;
+}
+.dropdown button:hover{
+  color: #777777;
+}
+/* -----------switchButton----------- */
+input[type='checkbox'] {
   height: 0;
   width: 0;
   visibility: hidden;
 }
-
 label {
   cursor: pointer;
   text-indent: -9999px;
@@ -56,9 +72,8 @@ label {
   border-radius: 100px;
   position: relative;
 }
-
 label:after {
-  content: "";
+  content: '';
   position: absolute;
   top: 3.6px;
   left: 3.7px;
@@ -77,44 +92,39 @@ input:checked + label:after {
   left: calc(100% - 4px);
   transform: translateX(-100%);
 }
-
 label:active:after {
   width: 30px;
 }
-/* -----------商品篩選----------- */
-/* .productFilter ul {
+/* -----------商品種類篩選欄位----------- */
+.productFilter ul {
   list-style: none;
   padding-left: 0;
 }
-.productFilter a{
-  text-decoration:none;
+.productFilter a:hover{
+color: #777777;
+}
+.productFilter i:hover{
+  color: #777777;
+  }
+.productFilter li:hover{
+  transform: scale(1.015);
+}
+.productFilter a {
+  text-decoration: none;
   color: #000;
 }
-.productFilterPaddong{
+.productFilterPaddong {
   padding-left: 20px;
-} */
-.accordion {
-  --bs-accordion-border-radius: 0rem;
-  width: 260px;
 }
-.accordion-button:focus {
-  z-index: 3;
-  border-color: var(--bs-accordion-btn-focus-border-color);
-  outline: 0;
-  box-shadow: none;
+.fa-chevron-right{
+  font-size: 10px;
+  margin-right: 5px;
 }
-.accordion-button:not(.collapsed) {
-  color: #000000;
-  background-color: white;
-  box-shadow: inset 0 calc(var(--bs-accordion-border-width) * -1) 0 var(--bs-accordion-border-color);
+.fa-square-full{
+  font-size: 5px;
+  margin-right: 8px;
+  color: rgb(109, 109, 109);
 }
-.accordion-body{
-padding: 0px;
-}
-.accordion-button {
-  border: none;
-}
-
 /* -----------商品列表----------- */
 .cardStyle {
   --bs-card-border-radius: 0rem;
@@ -126,20 +136,129 @@ padding: 0px;
 }
 .cardSize {
   width: 252px;
-  height: 500px;
+  /* height: 500px; */
 }
 .cardPadding {
   padding-left: 0px;
 }
-
 .productList {
   padding-right: 0px;
   padding-left: 0px;
 }
+.cardBottomMargin{
+  margin-bottom: 40px;
+  text-decoration:none;
+  color: #000;
+}
+.cardSize:hover{
+  transform: scale(1.02);
+}
+
+/* ------------ 分頁 ------------ */
+.pager {
+  margin: 0 0 3.75rem;
+  font-size: 0;
+  text-align: center;
+}
+
+.pager__item {
+  display: inline-block;
+  vertical-align: top;
+  font-size: 1.125rem;
+  font-weight: bold;
+  margin: 0 2px;
+}
+
+.pager__item.active .pager__link {
+  background-color: #1d1d1d;
+  border-color: #1d1d1d;
+  color: #fff;
+  text-decoration: none;
+}
+
+.pager__item--prev svg, .pager__item--next svg {
+  width: 8px;
+  height: 12px;
+}
+
+.pager__item--next .pager__link svg {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+  -webkit-transform-origin: center center;
+          transform-origin: center center;
+}
+
+.pager__link {
+  position: relative;
+  border-radius: 26px;
+  display: block;
+  text-align: center;
+  width: 2rem;
+  height: 2rem;
+  line-height: 2rem;
+  margin-left: -1px;
+  color: #2f3640;
+  text-decoration: none;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.pager__link:hover, .pager__link:focus, .pager__link:active {
+  background-color: #1d1d1d;
+  border-color: #1d1d1d;
+  color: #fff;
+  text-decoration: none;
+}
+
+.pager__link:hover svg path, .pager__link:focus svg path, .pager__link:active svg path {
+  fill: #fff;
+}
+
+.pager .pager__item.active + .pager__item .pager__link, .pager .pager__item:hover + .pager__item .pager__link {
+  border-left-color: #1d1d1d;
+}
+.pagerMarginTop{
+  margin-top: 40px;
+}
+
+@media screen and (max-width: 576px) {
+  .pager__item {
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
+  .pager__item.active, .pager__item:first-of-type, .pager__item:last-of-type, .pager__item:nth-of-type(2), .pager__item:nth-last-of-type(2) {
+    position: initial;
+    top: initial;
+    left: initial;
+  }
+  .pager__item.active + li {
+    position: initial;
+    top: initial;
+    left: initial;
+  }
+}
+/* -----------顧客怎麼說----------- */
+.bottomBanner {
+  height: 600px;
+  background: #ececec;
+}
+.messageBox {
+  height: 400px;
+  background: #fff;
+  padding-top: 40px;
+}
+
+.customersSayMargin {
+  margin: 20px;
+}
+.customersSayBox {
+  width: 900px;
+  text-align: center;
+}
+
+/* -----------footer----------- */
 .footer {
   background-color: #3ad3b9;
   height: 400px;
-}
-.dropdown .btn {
-  border: unset !important;
 }
